# telcontar

./: .env.example  404.html  CLAUDE.md  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.claude/: settings.json
.claude/agents/: doc-keeper.md  feature-forecast.md  repo-manager.md
.github/workflows/: ci.yml  docs.yml  release.yml
config/: settings.py
developer/adding-profiles/: index.html
developer/architecture/: index.html
developer/contributing/: index.html
developer/modules/: index.html
docs/: architecture.md  index.md  mcp-tools-reference.md  plan-lifecycle.md
docs/developer/: adding-profiles.md  architecture.md  contributing.md  modules.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: mcp-tools.md  profile-schema.md
docs/user-guide/: approval-modes.md  how-it-works.md  outputs.md  profiles.md
host/: agent.py  app.py  llm.py  main.py
profiles/: is_it_project.toml  personal_files.toml  research_papers.toml
search/: search_index.json
server/: archive.py  events.py  extract.py  graph.py  guards.py  journal.py  main.py  plan.py  profile.py  registry.py  sinks.py  tools.py
tests/: conftest.py  test_archive.py  test_compress_quarantine.py  test_events.py  test_execute_plan.py  test_graph.py  test_guards.py  test_host.py  test_journal.py  test_plan.py  test_profile.py  test_registry.py  test_review_plan.py  test_sinks.py  test_tools_outputs.py  test_tools_propose.py  test_tools_readonly.py  test_tools_registry.py  test_tools_write.py  test_undo_last.py
(+20 files in other folders)
